enum TaskStatus: String, Codable {
    case active = "ACTIVE"
    case completed = "COMPLETED"
    case overdue = "OVERDUE"
    case late = "LATE"
}
